聊天室基础架构 上下线通知

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,22 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/sco.message.css')
+    link(rel='stylesheet', href='/stylesheets/message.css')
+    link(rel='stylesheet', href='/css/messenger.css')
+    link(rel='stylesheet', href='/css/messenger-theme-ice.css')
+
+    link(rel='stylesheet', href='http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/main.css')
+    script(src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js")
+    script(src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js")
+
     script(src='socket.io/socket.io.js')
+    script(src='javasrcipt/client.js')
     script(src='javasrcipt/clientchat.js')
+    script(src='/javasrcipt/sco.message.js')
+    script(src="/js/messenger.min.js")
+    script(src="/js/messenger-theme-flat.js")
+
   body
     block content
