--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,102 @@
   <head>
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/sco.message.css">
+    <link rel="stylesheet" href="/stylesheets/message.css">
+    <link rel="stylesheet" href="/css/messenger.css">
+    <link rel="stylesheet" href="/css/messenger-theme-ice.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
+    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <script src="javasrcipt/client.js"></script>
     <script src="javasrcipt/clientchat.js"></script>
+    <script src="/javasrcipt/sco.message.js"></script>
+    <script src="/js/messenger.min.js"></script>
+    <script src="/js/messenger-theme-flat.js"></script>
   </head>
   <body>
-    <h1></h1>
-    <p>Welcome to </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <div style="margin-right:-10px;" class="panel panel-primary">
+            <div class="panel-heading"><span class="glyphicon glyphicon-user">&nbsp;</span><span>在线成员</span></div>
+            <div class="panel-body">
+              <div class="msg-list-body user-content">
+                <ul>
+                  <li style="display:none;"><a href="#"><img src="/images/1.jpg" class="img-thumbnail"><span></span></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="panel-footer">
+              <div class="btn-group">
+                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span></button>
+                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-user"></span></button>
+                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-film"></span></button>
+                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-music"></span></button>
+                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-heart"></span></button>
+                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-envelope"></span></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-9">
+          <div class="panel panel-primary">
+            <div class="panel-heading"><span class="glyphicon glyphicon-comment">&nbsp;</span><span>聊天室</span><span id="spanuser" style="float:right;"></span></div>
+            <div class="panel-body">
+              <div class="msg-list-body msg-content"></div>
+            </div>
+            <div class="panel-footer">
+              <div class="input-group">
+                <div class="input-group-addon"><a href="#"><img src="/images/bq.png"></a></div>
+                <div style="padding-bottom:0px;" class="input-group-addon">
+                  <label style="position:relative;"><img src="/images/jt.jpg" title="send images" style="cursor:pointer;">
+                    <input id="sendImage" type="file" value="images" style="display:none;">
+                  </label>
+                </div>
+                <input id="msg" type="text" placeholder="请输入聊天内容" onkeydown="javascript:keywordsMsg(event);" class="form-control"><span class="input-group-btn">
+                  <button id="sendMsg" type="button" class="btn btn-primary">发送/Send</button></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="myModal" tabindex="-1" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 id="myModalLabel" class="modal-title">请设置聊天昵称</h4>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-addon">昵称</div>
+                <input id="username" type="text" value="李阳" onkeydown="javascript:keywordsName(event);" class="form-control">
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <input id="btn-setName" type="button" value="应用昵称" class="btn btn-primary">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="setMsgToOne" tabindex="-1" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 id="myModalLabel1" class="modal-title"></h4>
+          </div>
+          <div class="modal-body">
+            <input id="input_msgToOne" type="text" onkeydown="javascript:keywordsName1(event);" class="form-control">
+          </div>
+          <div class="modal-footer">
+            <input id="btn_toOne" type="button" value="发送/Send" class="btn btn-primary">
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
